--- a/server/CloudWatcher/CloudWatcher.csproj
+++ b/server/CloudWatcher/CloudWatcher.csproj
@@ -16,5 +16,16 @@
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.SDK" Version="17.14.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <!-- Entity Framework Core for PostgreSQL -->
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
